--- a/index.html
+++ b/index.html
@@ -1,25 +1,149 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TMDB</title>
+    <link rel="stylesheet" href="src/css/style.css">
 </head>
+
 <body>
     <header>
         <div class="navbar">
-            <nav>
-            <a href="" class="logo">TMDB</a>
+            <nav class="navbar__nav">
+                <a href="" class="logo">TMDB</a>
                 <a href="">Movies</a>
                 <a href="">Tv Shows</a>
                 <a href="">People</a>
                 <a href="">More</a>
             </nav>
-            <div class="navbar--profile">
-                
+            <div class="navbar__profile">
+                <!-- NAVBAR PROFILE (ISI APAAN YAK) -->
+                 <select name="lang" id="">
+                    <option value="EN">EN</option>
+                    <option value="ID">ID</option>
+                 </select>
+                 <a href=""><i class="fa-solid fa-circle-user"></i></a>
+                 <a href=""><i class="fa-solid fa-search"></i></a>
             </div>
         </div>
     </header>
+    <main>
+        <div class="hero">
+            <div class="hero__title">
+                <h2>Welcome</h2>
+                <h3>Millions of movies, TV Shows, and people to discover</h3>
+            </div>
+            <div class="hero__search">
+                <!-- INPUT GROUP (button) -->
+                <input type="text">
+            </div>
+        </div>
+        <section class="trending">
+            <div class="section__header">
+                <h3>Trending</h3>
+                <div class="section__selector">
+                    <a href="">Today</a>
+                    <a href="">This Week</a>
+                </div>
+            </div>
+            <div id="trending-section">
+                prikitiw
+                <!-- Content goes here -->
+            </div>
+        </section>
+        <section class="latest-trailers">
+            <div class="section__header">
+                <h3>Latest Trailers</h3>
+                <div class="section__selector">
+                    <a href="">Popular</a>
+                    <a href="">Streaming</a>
+                    <a href="">On TV</a>
+                    <a href="">For Rent</a>
+                    <a href="">In Theaters</a>
+                </div>
+            </div>
+            <div id="trailers-section">
+                <!-- Content goes here -->
+            </div>
+        </section>
+        <section class="popular">
+            <div class="section__header">
+                <h3>What's Popular</h3>
+                <div class="section__selector">
+                    <a href="">Streaming</a>
+                    <a href="">On TV</a>
+                    <a href="">For Rent</a>
+                    <a href="">In Theaters</a>
+                </div>
+            </div>
+            <div id="popular-section">
+                <!-- Content goes here -->
+            </div>
+        </section>
+        <section class="free">
+            <div class="section__header">
+                <h3>Free To Watch</h3>
+                <div class="section__selector">
+                    <a href="">Movies</a>
+                    <a href="">TV</a>
+                </div>
+            </div>
+            <div id="free-section">
+                <!-- Content goes here -->
+            </div>
+        </section>
+        <section class="genres">
+            <div class="section__header">
+                <h3>Genres</h3>
+                <div class="section__selector">
+                    <a href="">Movies</a>
+                    <a href="">TV</a>
+                </div>
+                <div class="section__combo-box">
+                    <select name="" id="genres">
+                        <option value="">ea</option>
+                    </select>
+                </div>
+            </div>
+            <div id="genre-section">
+                <!-- Content goes here -->
+            </div>
+        </section>
+    </main>
+    <footer>
+        <nav>
+            <div class="footer__items">
+
+            </div>
+            <div class="footer__items">
+                <h3>The Basics</h3>
+                <ul>
+                    <li>About</li>
+                    <li>Contact</li>
+                    <li>API Documentation</li>
+                    <li>API for Business</li>
+                    <li>System Status</li>
+                </ul>
+            </div>
+            <div class="footer__items">
+                <h3>GET INVOLVED</h3>
+                <ul>
+                    <li>Contribution Bible</li>
+                    <li>Add New Movie</li>
+                    <li>Add New TV Show</li>
+                </ul>
+            </div>
+            <div class="footer__items">
+                
+            </div>
+            <div class="footer__items">
+
+            </div>
+        </nav>
+    </footer>
     <script type="module" src="src/js/app.js"></script>
 </body>
+
 </html>
