--- a/index.html
+++ b/index.html
@@ -11,137 +11,219 @@
 <body>
     <header>
         <div class="navbar">
-            <nav class="navbar__nav">
-                <a href="" class="logo">TMDB</a>
-                <a href="">Movies</a>
-                <a href="">Tv Shows</a>
-                <a href="">People</a>
-                <a href="">More</a>
-            </nav>
-            <div class="navbar__profile">
-                <!-- NAVBAR PROFILE (ISI APAAN YAK) -->
-                 <select name="lang" id="">
-                    <option value="EN">EN</option>
-                    <option value="ID">ID</option>
-                 </select>
-                 <a href=""><i class="fa-solid fa-circle-user"></i></a>
-                 <a href=""><i class="fa-solid fa-search"></i></a>
+            <div class="container">
+                <div class="navbar__items">
+                    <nav class="navbar__nav">
+                        <a href="" class="logo">TMDB</a>
+                        <a href="">Movies</a>
+                        <a href="">Tv Shows</a>
+                        <a href="">People</a>
+                        <a href="">More</a>
+                    </nav>
+                    <div class="navbar__profile">
+                        <!-- NAVBAR PROFILE (ISI APAAN YAK) -->
+                        <select name="lang" id="">
+                            <option value="EN">EN</option>
+                            <option value="ID">ID</option>
+                        </select>
+                        <a href=""><i class="fa-solid fa-circle-user"></i></a>
+                        <a href=""><i class="fa-solid fa-search"></i></a>
+                    </div>
+                </div>
+                <div class="navbar__search">
+                    <!-- INPUT GROUP -->
+                    <input type="text" placeholder="Ini search">
+                </div>
             </div>
         </div>
     </header>
     <main>
         <div class="hero">
-            <div class="hero__title">
-                <h2>Welcome</h2>
-                <h3>Millions of movies, TV Shows, and people to discover</h3>
-            </div>
-            <div class="hero__search">
-                <!-- INPUT GROUP (button) -->
-                <input type="text">
-            </div>
-        </div>
-        <section class="trending">
-            <div class="section__header">
-                <h3>Trending</h3>
-                <div class="section__selector">
-                    <a href="">Today</a>
-                    <a href="">This Week</a>
+            <div class="container">
+                <div class="hero__items">
+
+                    <div class="hero__title">
+                        <h2>Welcome</h2>
+                        <h3>Millions of movies, TV Shows, and people to discover</h3>
+                    </div>
+                    <div class="hero__search">
+                        <!-- INPUT GROUP (button) -->
+                        <input type="text" placeholder="Ini search bar">
+                    </div>
                 </div>
             </div>
-            <div id="trending-section">
-                prikitiw
-                <!-- Content goes here -->
+        </div>
+
+        <section class="trending">
+            <div class="container">
+                <div class="section__header">
+                    <h3>Trending</h3>
+                    <div class="section__selector">
+                        <a href="">Today</a>
+                        <a href="">This Week</a>
+                    </div>
+                </div>
+                <div class="section__items" id="trending-section">
+                    <!-- Content goes here -->
+                     <!-- NOTES : Movie Id per item -->
+                    <div class="section__movie-card">
+                        <img src="https://img.freepik.com/free-photo/close-up-portrait-handsome-smiling-young-man-white-t-shirt-blurry-outdoor-nature_176420-6305.jpg?semt=ais_hybrid&w=740&q=80"
+                            alt="">
+                        <h2>iladlhaw</h2>
+                        <p>Date | Rate</p>
+                    </div>
+                    <div class="section__movie-card">
+                        <img src="https://img.freepik.com/free-photo/close-up-portrait-handsome-smiling-young-man-white-t-shirt-blurry-outdoor-nature_176420-6305.jpg?semt=ais_hybrid&w=740&q=80"
+                            alt="">
+                        <h2>iladlhaw</h2>
+                        <p>Date | Rate</p>
+                    </div>
+                    <div class="section__movie-card">
+                        <img src="https://img.freepik.com/free-photo/close-up-portrait-handsome-smiling-young-man-white-t-shirt-blurry-outdoor-nature_176420-6305.jpg?semt=ais_hybrid&w=740&q=80"
+                            alt="">
+                            <h2>iladlhaw</h2>
+                            <p>Date | Rate</p>
+                    </div>
+                    <div class="section__movie-card">
+                        <img src="https://img.freepik.com/free-photo/close-up-portrait-handsome-smiling-young-man-white-t-shirt-blurry-outdoor-nature_176420-6305.jpg?semt=ais_hybrid&w=740&q=80"
+                            alt="">
+                            <h2>iladlhaw</h2>
+                            <p>Date | Rate</p>
+                    </div>
+                    <div class="section__movie-card">
+                        <img src="https://img.freepik.com/free-photo/close-up-portrait-handsome-smiling-young-man-white-t-shirt-blurry-outdoor-nature_176420-6305.jpg?semt=ais_hybrid&w=740&q=80"
+                            alt="">
+                            <h2>iladlhaw</h2>
+                            <p>Date | Rate</p>
+                    </div>
+                    <div class="section__movie-card">
+                        <img src="https://img.freepik.com/free-photo/close-up-portrait-handsome-smiling-young-man-white-t-shirt-blurry-outdoor-nature_176420-6305.jpg?semt=ais_hybrid&w=740&q=80"
+                            alt="">
+                            <h2>iladlhaw</h2>
+                            <p>Date | Rate</p>
+                    </div>
+                    <div class="section__movie-card">
+                        <img src="https://img.freepik.com/free-photo/close-up-portrait-handsome-smiling-young-man-white-t-shirt-blurry-outdoor-nature_176420-6305.jpg?semt=ais_hybrid&w=740&q=80"
+                            alt="">
+                            <h2>iladlhaw</h2>
+                            <p>Date | Rate</p>
+                    </div>
+                    <div class="section__movie-card">
+                        <img src="https://img.freepik.com/free-photo/close-up-portrait-handsome-smiling-young-man-white-t-shirt-blurry-outdoor-nature_176420-6305.jpg?semt=ais_hybrid&w=740&q=80"
+                            alt="">
+                            <h2>iladlhaw</h2>
+                            <p>Date | Rate</p>
+                    </div>
+                </div>
+            </div>
             </div>
         </section>
         <section class="latest-trailers">
-            <div class="section__header">
-                <h3>Latest Trailers</h3>
-                <div class="section__selector">
-                    <a href="">Popular</a>
-                    <a href="">Streaming</a>
-                    <a href="">On TV</a>
-                    <a href="">For Rent</a>
-                    <a href="">In Theaters</a>
+            <div class="container">
+                <div class="section__header">
+                    <h3>Latest Trailers</h3>
+                    <div class="section__selector">
+                        <a href="">Popular</a>
+                        <a href="">Streaming</a>
+                        <a href="">On TV</a>
+                        <a href="">For Rent</a>
+                        <a href="">In Theaters</a>
+                    </div>
                 </div>
-            </div>
-            <div id="trailers-section">
-                <!-- Content goes here -->
+                <div class="section__items" id="trailers-section">
+                    <!-- Content goes here -->
+                </div>
             </div>
         </section>
         <section class="popular">
-            <div class="section__header">
-                <h3>What's Popular</h3>
-                <div class="section__selector">
-                    <a href="">Streaming</a>
-                    <a href="">On TV</a>
-                    <a href="">For Rent</a>
-                    <a href="">In Theaters</a>
+            <div class="container">
+
+                <div class="section__header">
+                    <h3>What's Popular</h3>
+                    <div class="section__selector">
+                        <a href="">Streaming</a>
+                        <a href="">On TV</a>
+                        <a href="">For Rent</a>
+                        <a href="">In Theaters</a>
+                    </div>
                 </div>
-            </div>
-            <div id="popular-section">
-                <!-- Content goes here -->
+                <div class="section__items" id="popular-section">
+                    <!-- Content goes here -->
+                </div>
             </div>
         </section>
         <section class="free">
-            <div class="section__header">
-                <h3>Free To Watch</h3>
-                <div class="section__selector">
-                    <a href="">Movies</a>
-                    <a href="">TV</a>
+            <div class="container">
+
+                <div class="section__header">
+                    <h3>Free To Watch</h3>
+                    <div class="section__selector">
+                        <a href="">Movies</a>
+                        <a href="">TV</a>
+                    </div>
                 </div>
-            </div>
-            <div id="free-section">
-                <!-- Content goes here -->
+                <div class="section__items" id="free-section">
+                    <!-- Content goes here -->
+                </div>
             </div>
         </section>
         <section class="genres">
-            <div class="section__header">
-                <h3>Genres</h3>
-                <div class="section__selector">
-                    <a href="">Movies</a>
-                    <a href="">TV</a>
+            <div class="container">
+
+                <div class="section__header">
+                    <h3>Genres</h3>
+                    <div class="section__selector">
+                        <a href="">Movies</a>
+                        <a href="">TV</a>
+                    </div>
+                    <div class="section__combo-box">
+                        <select name="" id="genres">
+                            <!-- GOAL : Fetch All genre by id -->
+                            <option value="">genre1</option>
+                        </select>
+                    </div>
                 </div>
-                <div class="section__combo-box">
-                    <select name="" id="genres">
-                        <option value="">ea</option>
-                    </select>
+                <div class="section__items" id="genre-section">
+                    <!-- Content goes here -->
                 </div>
-            </div>
-            <div id="genre-section">
-                <!-- Content goes here -->
             </div>
         </section>
     </main>
-    <footer>
-        <nav>
-            <div class="footer__items">
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__container">
+                <div class="footer__logo">
+                    <h2>TMDB</h2>
+                    <p>Your trusted source for movies, TV shows, and more.</p>
+                </div>
 
+                <div class="footer__links">
+                    <div class="footer__column">
+                        <h4>Explore</h4>
+                        <a href="#">Movies</a>
+                        <a href="#">TV Shows</a>
+                        <a href="#">People</a>
+                        <a href="#">Trending</a>
+                    </div>
+                    <div class="footer__column">
+                        <h4>Community</h4>
+                        <a href="#">Discussions</a>
+                        <a href="#">Leaderboard</a>
+                        <a href="#">Support</a>
+                    </div>
+                    <div class="footer__column">
+                        <h4>Legal</h4>
+                        <a href="#">Terms of Use</a>
+                        <a href="#">Privacy Policy</a>
+                        <a href="#">API</a>
+                    </div>
+                </div>
             </div>
-            <div class="footer__items">
-                <h3>The Basics</h3>
-                <ul>
-                    <li>About</li>
-                    <li>Contact</li>
-                    <li>API Documentation</li>
-                    <li>API for Business</li>
-                    <li>System Status</li>
-                </ul>
-            </div>
-            <div class="footer__items">
-                <h3>GET INVOLVED</h3>
-                <ul>
-                    <li>Contribution Bible</li>
-                    <li>Add New Movie</li>
-                    <li>Add New TV Show</li>
-                </ul>
-            </div>
-            <div class="footer__items">
-                
-            </div>
-            <div class="footer__items">
 
+            <div class="footer__bottom">
+                <p>&copy; 2025 TMDB Clone. Built for learning purposes.</p>
             </div>
-        </nav>
+        </div>
     </footer>
     <script type="module" src="src/js/app.js"></script>
 </body>
