--- a/index.html
+++ b/index.html
@@ -59,61 +59,14 @@
                 <div class="section__header">
                     <h3>Trending</h3>
                     <div class="section__selector">
-                        <a href="">Today</a>
-                        <a href="">This Week</a>
+                        <a class="active" href="" id="trending-today">Today</a>
+                        <a href="" id="trending-week">This Week</a>
                     </div>
                 </div>
                 <div class="section__items" id="trending-section">
                     <!-- Content goes here -->
                      <!-- NOTES : Movie Id per item -->
-                    <div class="section__movie-card">
-                        <img src="https://img.freepik.com/free-photo/close-up-portrait-handsome-smiling-young-man-white-t-shirt-blurry-outdoor-nature_176420-6305.jpg?semt=ais_hybrid&w=740&q=80"
-                            alt="">
-                        <h2>iladlhaw</h2>
-                        <p>Date | Rate</p>
-                    </div>
-                    <div class="section__movie-card">
-                        <img src="https://img.freepik.com/free-photo/close-up-portrait-handsome-smiling-young-man-white-t-shirt-blurry-outdoor-nature_176420-6305.jpg?semt=ais_hybrid&w=740&q=80"
-                            alt="">
-                        <h2>iladlhaw</h2>
-                        <p>Date | Rate</p>
-                    </div>
-                    <div class="section__movie-card">
-                        <img src="https://img.freepik.com/free-photo/close-up-portrait-handsome-smiling-young-man-white-t-shirt-blurry-outdoor-nature_176420-6305.jpg?semt=ais_hybrid&w=740&q=80"
-                            alt="">
-                            <h2>iladlhaw</h2>
-                            <p>Date | Rate</p>
-                    </div>
-                    <div class="section__movie-card">
-                        <img src="https://img.freepik.com/free-photo/close-up-portrait-handsome-smiling-young-man-white-t-shirt-blurry-outdoor-nature_176420-6305.jpg?semt=ais_hybrid&w=740&q=80"
-                            alt="">
-                            <h2>iladlhaw</h2>
-                            <p>Date | Rate</p>
-                    </div>
-                    <div class="section__movie-card">
-                        <img src="https://img.freepik.com/free-photo/close-up-portrait-handsome-smiling-young-man-white-t-shirt-blurry-outdoor-nature_176420-6305.jpg?semt=ais_hybrid&w=740&q=80"
-                            alt="">
-                            <h2>iladlhaw</h2>
-                            <p>Date | Rate</p>
-                    </div>
-                    <div class="section__movie-card">
-                        <img src="https://img.freepik.com/free-photo/close-up-portrait-handsome-smiling-young-man-white-t-shirt-blurry-outdoor-nature_176420-6305.jpg?semt=ais_hybrid&w=740&q=80"
-                            alt="">
-                            <h2>iladlhaw</h2>
-                            <p>Date | Rate</p>
-                    </div>
-                    <div class="section__movie-card">
-                        <img src="https://img.freepik.com/free-photo/close-up-portrait-handsome-smiling-young-man-white-t-shirt-blurry-outdoor-nature_176420-6305.jpg?semt=ais_hybrid&w=740&q=80"
-                            alt="">
-                            <h2>iladlhaw</h2>
-                            <p>Date | Rate</p>
-                    </div>
-                    <div class="section__movie-card">
-                        <img src="https://img.freepik.com/free-photo/close-up-portrait-handsome-smiling-young-man-white-t-shirt-blurry-outdoor-nature_176420-6305.jpg?semt=ais_hybrid&w=740&q=80"
-                            alt="">
-                            <h2>iladlhaw</h2>
-                            <p>Date | Rate</p>
-                    </div>
+                   
                 </div>
             </div>
             </div>
