UNCOMPLETED - Models, Homepage, Details

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TMDB</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="src/css/style.css">
 </head>
 
@@ -21,7 +22,6 @@
                         <a href="">More</a>
                     </nav>
                     <div class="navbar__profile">
-                        <!-- NAVBAR PROFILE (ISI APAAN YAK) -->
                         <select name="lang" id="">
                             <option value="EN">EN</option>
                             <option value="ID">ID</option>
@@ -65,79 +65,70 @@
                 </div>
                 <div class="section__items" id="trending-section">
                     <!-- Content goes here -->
-                     <!-- NOTES : Movie Id per item -->
-                   
+                    <!-- NOTES : Movie Id per item -->
                 </div>
             </div>
-            </div>
-        </section>
-        <section class="latest-trailers">
-            <div class="container">
-                <div class="section__header">
-                    <h3>Latest Trailers</h3>
-                    <div class="section__selector">
-                        <a href="">Popular</a>
-                        <a href="">Streaming</a>
-                        <a href="">On TV</a>
-                        <a href="">For Rent</a>
-                        <a href="">In Theaters</a>
-                    </div>
-                </div>
-                <div class="section__items" id="trailers-section">
-                    <!-- Content goes here -->
-                </div>
             </div>
         </section>
         <section class="popular">
             <div class="container">
-
                 <div class="section__header">
                     <h3>What's Popular</h3>
                     <div class="section__selector">
                         <a href="">Streaming</a>
                         <a href="">On TV</a>
-                        <a href="">For Rent</a>
-                        <a href="">In Theaters</a>
                     </div>
                 </div>
                 <div class="section__items" id="popular-section">
                     <!-- Content goes here -->
+                    <div class="section__movie-card">
+                        <img src="https://img.freepik.com/free-photo/close-up-portrait-handsome-smiling-young-man-white-t-shirt-blurry-outdoor-nature_176420-6305.jpg?semt=ais_hybrid&w=740&q=80"
+                            alt="">
+                        <h2>iladlhaw</h2>
+                        <p>Date | Rate</p>
+                    </div>
+
                 </div>
             </div>
         </section>
-        <section class="free">
+        <section class="top-rated">
             <div class="container">
-
                 <div class="section__header">
-                    <h3>Free To Watch</h3>
+                    <h3>Top Rated</h3>
                     <div class="section__selector">
                         <a href="">Movies</a>
-                        <a href="">TV</a>
+                        <a href="">Tv Series</a>
                     </div>
                 </div>
-                <div class="section__items" id="free-section">
+                <div class="section__items" id="top-rated-section">
                     <!-- Content goes here -->
+                    <div class="section__movie-card">
+                        <img src="https://img.freepik.com/free-photo/close-up-portrait-handsome-smiling-young-man-white-t-shirt-blurry-outdoor-nature_176420-6305.jpg?semt=ais_hybrid&w=740&q=80"
+                            alt="">
+                        <h2>iladlhaw</h2>
+                        <p>Date | Rate</p>
+                    </div>
                 </div>
             </div>
         </section>
-        <section class="genres">
+        <section class="now-playing">
             <div class="container">
 
                 <div class="section__header">
-                    <h3>Genres</h3>
+                    <h3>Now Playing</h3>
                     <div class="section__selector">
                         <a href="">Movies</a>
-                        <a href="">TV</a>
-                    </div>
-                    <div class="section__combo-box">
-                        <select name="" id="genres">
-                            <!-- GOAL : Fetch All genre by id -->
-                            <option value="">genre1</option>
-                        </select>
+                        <a href="">TV Series</a>
                     </div>
                 </div>
-                <div class="section__items" id="genre-section">
+                <div class="section__items" id="now-playing-section">
                     <!-- Content goes here -->
+                    <div class="section__movie-card">
+                        <img src="https://img.freepik.com/free-photo/close-up-portrait-handsome-smiling-young-man-white-t-shirt-blurry-outdoor-nature_176420-6305.jpg?semt=ais_hybrid&w=740&q=80"
+                            alt="">
+                        <h2>iladlhaw</h2>
+                        <p>Date | Rate</p>
+                    </div>
                 </div>
             </div>
         </section>
