FETCH ALL ITEMS IN HOMEPAGE

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                 <div class="section__header">
                     <h3>What's Popular</h3>
                     <div class="section__selector">
-                        <a href="">Streaming</a>
-                        <a href="">On TV</a>
+                        <a id="popular-movie" class="active" href="">Streaming</a>
+                        <a id="popular-tv" href="">On TV</a>
                     </div>
                 </div>
                 <div class="section__items" id="popular-section">
@@ -96,8 +96,8 @@
                 <div class="section__header">
                     <h3>Top Rated</h3>
                     <div class="section__selector">
-                        <a href="">Movies</a>
-                        <a href="">Tv Series</a>
+                        <a id="top-rated-movie" class="active" href="">Movies</a>
+                        <a id="top-rated-tv" href="">Tv Series</a>
                     </div>
                 </div>
                 <div class="section__items" id="top-rated-section">
@@ -117,8 +117,8 @@
                 <div class="section__header">
                     <h3>Now Playing</h3>
                     <div class="section__selector">
-                        <a href="">Movies</a>
-                        <a href="">TV Series</a>
+                        <a id="now-playing-movie" class="active" href="">Movies</a>
+                        <a id="now-playing-tv" href="">TV Series</a>
                     </div>
                 </div>
                 <div class="section__items" id="now-playing-section">
