--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                             <option value="EN">EN</option>
                             <option value="ID">ID</option>
                         </select>
-                        <a href=""><i class="fa-solid fa-circle-user"></i></a>
+                        <a id="watchlist-btn" href=""><i class="fa-solid fa-circle-user"></i></a>
                         <a href=""><i class="fa-solid fa-search"></i></a>
                     </div>
                 </div>
