ability to filter

--- a/details.html
+++ b/details.html
@@ -58,7 +58,7 @@
             max-width: 250px;
             border-radius: 8px;
             overflow: hidden;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
 
         .movie-card img {
@@ -91,8 +91,8 @@
                 <div class="navbar__items">
                     <nav class="navbar__nav">
                         <a href="index.html" class="logo">TMDB</a>
-                        <a href="">Movies</a>
-                        <a href="">Tv Shows</a>
+                        <a href="discover.html?type=movie">Movies</a>
+                        <a href="discover.html?type=tv">Tv Shows</a>
                         <a href="">People</a>
                         <a href="">More</a>
                     </nav>
