--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                 <div class="navbar__items">
                     <nav class="navbar__nav">
                         <a href="" class="logo">TMDB</a>
-                        <a href="">Movies</a>
-                        <a href="">Tv Shows</a>
+                        <a href="discover.html?type=movie">Movies</a>
+                        <a href="discover.html?type=tv">Tv Shows</a>
                         <a href="">People</a>
                         <a href="">More</a>
                     </nav>
